--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
         </tbody>
     </table>
 
-    <script>
-        
-    </script>
+    <script src='script.js'></script>
 
 </body>
 </html>
